finishing refreshToken service and creating /me route and user update service
