# src/modules/users/infra/http/routes/users.routes.ts
@@ -2,10 +2,16 @@ import { celebrate, Joi, Segments } from 'celebrate';
 import { Router } from 'express';
 
 import { CreateUserController } from '@modules/users/services/create/CreateUserController';
+import { FindUserByIdController } from '@modules/users/services/findById/FindUserByIdController';
+import { UpdateUserController } from '@modules/users/services/update/UpdateUserController';
+
+import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
 
 export const usersRouter = Router();
 
 const createUserController = new CreateUserController();
+const findUserByIdController = new FindUserByIdController();
+const updateUserController = new UpdateUserController();
 
 usersRouter.post(
   '/',
@@ -19,36 +25,19 @@ usersRouter.post(
   createUserController.handle,
 );
 
-usersRouter.get('/');
-
-usersRouter.get(
-  '/:id',
-  celebrate({
-    [Segments.PARAMS]: {
-      id: Joi.string().uuid().required(),
-    },
-  }),
-);
+usersRouter.get('/me', ensureAuthenticated, findUserByIdController.handle);
 
 usersRouter.put(
   '/:id',
+  ensureAuthenticated,
   celebrate({
     [Segments.PARAMS]: {
       id: Joi.string().uuid().required(),
     },
     [Segments.BODY]: {
-      name: Joi.string(),
-      email: Joi.string(),
-      password: Joi.string(),
+      name: Joi.string().required(),
+      email: Joi.string().required(),
     },
   }),
-);
-
-usersRouter.delete(
-  '/:id',
-  celebrate({
-    [Segments.PARAMS]: {
-      id: Joi.string().uuid().required(),
-    },
-  }),
+  updateUserController.handle,
 );
