# src/shared/swagger.json
@@ -11,9 +11,7 @@
   "paths": {
     "/users": {
       "post": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "summary": "Create User",
         "description": "Create a new User",
         "requestBody": {
@@ -31,6 +29,77 @@
           },
           "400": {
             "description": "User already exists"
+          }
+        }
+      },
+      "put": {
+        "tags": ["User"],
+        "summary": "Update User",
+        "description": "Update User",
+        "security": [
+          { "bearerAuth": [] }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing or Invalid JWT Token"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/users/me": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Logged User Data",
+        "description": "Logged User Data",
+        "security": [
+          { "bearerAuth": [] }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing or Invalid JWT Token"
+          },
+          "404": {
+            "description": "User not found"
           }
         }
       }
